; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_output.c_PICE_KdpPrintString.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_output.c_PICE_KdpPrintString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@bIsDebugPrint = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"PICE_KdpPrintString\0A\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PICE_KdpPrintString(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @save_flags(i32 %5)
  %7 = call i32 (...) @cli()
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* @bIsDebugPrint, align 4
  %9 = call i32 @DPRINT(i32 ptrtoint ([23 x i8]* @.str to i32))
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @AddToRingBuffer(i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @restore_flags(i32 %14)
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @save_flags(i32) #1

declare dso_local i32 @cli(...) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i32 @AddToRingBuffer(i32) #1

declare dso_local i32 @restore_flags(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
